# ClaudeHydra

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .hydra-analytics.json  .mcp.json  .reporemixignore  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  GeminiCLI.vbs  README.md  SHORTCUT-QUICK-START.md  Start-HYDRA.ps1  _launcher.ps1  _launcher.sh  add-psm1-context-menu.ps1  auth-rebuild-plan.json  biome.json  bridge.ps1  claude-code.bat  claude.cmd  create-both-shortcuts.bat  create-both-shortcuts.vbs  create-desktop-shortcut.bat  create-shortcut.ps1  create-shortcut.vbs  create-shortcuts.js  create-tauri-shortcut.ps1  debug-bridge.mjs  dev.bat  docker-compose.yml  fix-psm1.ps1  fix_used_in_module.js  fix_used_in_module.mjs  gemini-hydra.omp.json  hydra-config.json  hydra.cmd  (+29 more)
.claude/: settings.json  settings.local.json  statusline.cjs
.gemini/: settings.json
.github/: dependabot.yml
.husky/: commit-msg  pre-commit
.hydra/: hooks.json  mcp-servers.json
.serena/: project.yml
CodexCLI/: .env.example  README.md  package-lock.json  package.json
DeepSeekCLI/: README.md
GeminiCLI/: .eslintrc.json  .gitignore  .hydra-analytics.json  .hydra-migrations.json  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  _launcher.ps1  eslint.config.js  gemini-extension.json  package-lock.json  package.json  prompt-optimizer-gemini.json
GrokCLI/: .env.example  README.md  package-lock.json  package.json
JulesCLI/: .env.example  README.md  package-lock.json  package.json
ai-handler/: AIModelHandler.psm1  Demo-AIHandler.ps1  Demo-AdvancedAI.ps1  Initialize-AIHandler.ps1  Initialize-AdvancedAI.ps1  Invoke-AI.ps1  Invoke-AIHelp.ps1  ai-config.json  ai-handler-pipeline.json
api/: anthropic-models.ts
assets/: README.md
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
claude-gui/: .gitignore  ARCHITECTURE.md  HYDRA.bat  IMPLEMENTATION_SUMMARY.md  LAZY_LOADING.md  LAZY_LOADING_EXAMPLES.md  QUICK_REFERENCE.md  build-fast.bat  create-shortcut.ps1  kill-port.ps1  package-lock.json  package.json  playwright.config.ts  rebuild.bat  run-claude-gui.bat  start-hydra.ps1  tailwind.config.js  test-continuous.mjs  test-rag-learning.mjs  tsconfig.e2e.json  vite.config.ts  wdio.conf.ts
claude-gui/src-tauri/: Cargo.toml  tauri.conf.json
claude-gui/src-tauri/.cargo/: audit.toml  config.toml
claude-gui/src-tauri/src/: anthropic.rs  bridge.rs  debug.rs  learning.rs  lib.rs  memory.rs  ollama_commands.rs  parallel.rs
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  BENTO_GRID.md  CLI-IMPROVEMENTS-50.md  DEBUG-LOGGING.md  DESKTOP-SHORTCUT.md  EFFECTS_COMPONENTS.md  MCP_TOOLS.md  UI_COMPONENTS.md  (+3 more)
src/gui/src-tauri/: Cargo.toml  tauri.conf.json
src/gui/src-tauri/capabilities/: default.json
src/gui/src-tauri/src/: lib.rs  main.rs
(+1009 files in other folders)
